RESOLVED FIXED140030
ASSERT that a null key is never used with FeatureCounter
https://bugs.webkit.org/show_bug.cgi?id=140030
Summary ASSERT that a null key is never used with FeatureCounter
Chris Dumez
Reported 2015-01-01 13:29:30 PST
ASSERT that a null key is never used with FeatureCounter
Attachments
Patch (2.32 KB, patch)
2015-01-01 13:31 PST, Chris Dumez
no flags
Patch (2.23 KB, patch)
2015-01-01 14:09 PST, Chris Dumez
no flags
Patch (2.33 KB, patch)
2015-01-01 15:12 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-01-01 13:31:34 PST
Chris Dumez
Comment 2 2015-01-01 14:09:10 PST
Darin Adler
Comment 3 2015-01-01 15:07:01 PST
Comment on attachment 243871 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=243871&action=review > Source/WebCore/platform/FeatureCounter.cpp:55 > + ASSERT_ARG(key, key); Release builds will give a warning unless you use ASSERT_UNUSED here. > Source/WebCore/platform/FeatureCounter.cpp:61 > + ASSERT_ARG(key, key); Release builds will give a warning unless you use ASSERT_UNUSED here.
Chris Dumez
Comment 4 2015-01-01 15:12:00 PST
WebKit Commit Bot
Comment 5 2015-01-01 15:53:20 PST
Comment on attachment 243873 [details] Patch Clearing flags on attachment: 243873 Committed r177851: <http://trac.webkit.org/changeset/177851>
WebKit Commit Bot
Comment 6 2015-01-01 15:53:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.