ASSERT that a null key is never used with FeatureCounter https://bugs.webkit.org/show_bug.cgi?id=140030

Reviewed by Darin Adler.

* platform/FeatureCounter.cpp:
(WebCore::FeatureCounter::incrementKey):
(WebCore::FeatureCounter::setKey):
* platform/ios/FeatureCounter.mm:
(WebCore::FeatureCounter::incrementKey):
(WebCore::FeatureCounter::setKey):


Canonical link: https://commits.webkit.org/158009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177851 268f45cc-cd09-0410-ab3c-d52691b4dbfc